<resources>
    <string name="app_name">Ch14TasksRoomDBHFReRev</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_task_txt">Enter Task</string>
    <string name="add_task_btn_txt">Add Task</string>
    <string name="no_tasks_to_show_txt">No Tasks to Show</string>
    <string name="task_name_display_txt">Task Name</string>
    <string name="task_name_placeholder">Task Name Placeholder</string>
    <string name="task_done_cb_txt">Done?</string>
    <string name="delete_button_image_text">Delete Button Image</string>
    <string name="update_task_btn_txt">Update Task</string>
    <string name="delete_task_btn_txt">Delete Task</string>
</resources>